--- a/Boosting/AdaBoost.ipynb
+++ b/Boosting/AdaBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,13 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create adaboost classifer object\n",
-    "abc = AdaBoostClassifier(n_estimators=50,\n",
-    "                         learning_rate=1)\n",
+    "abc = AdaBoostClassifier(n_estimators=50, learning_rate=1)\n",
     "# Train Adaboost Classifer\n",
     "model = abc.fit(X_train, y_train)\n",
     "\n",
@@ -55,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9555555555555556\n"
+      "Accuracy: 0.9111111111111111\n"
      ]
     }
    ],
@@ -80,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9555555555555556\n"
+      "Accuracy: 0.9777777777777777\n"
      ]
     },
     {
@@ -122,6 +121,20 @@
     "# Model Accuracy, how often is the classifier correct?\n",
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
