--- a/Boosting/Implementation/Adaboost-Implementation.ipynb
+++ b/Boosting/Implementation/Adaboost-Implementation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,6 +24,37 @@
     "from Adaboost import *\n",
     "from sklearn.ensemble import AdaBoostClassifier"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spambase DataSet: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset containing 4601 emails that are labeled as either spam or not. Mostly features are word & symbol frequencies. The data is publicly available at the University of California, Irvine's Machine Learning repository. It can be downloaded in this link:\n",
+    "https://archive.ics.uci.edu/ml/datasets/spambase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wget('https://archive.ics.uci.edu/static/public/94/spambase.zip', 'spambase.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -553,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
