--- a/Boosting/Implementation/Adaboost-Implementation.ipynb
+++ b/Boosting/Implementation/Adaboost-Implementation.ipynb
@@ -445,6 +445,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\hat{w}_i \\leftarrow \\hat{w_i}*e^{-\\alpha h(\\mathbf{x}_i)y_i},\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "\\sum_{i=1}^{n} y_i h(\\mathbf{x}_i) e^{-\\left(y_i H(\\mathbf{x}_i)+\\alpha y_i h(\\mathbf{x}_i)\\right)}  &=0 \n",
+    "&& \\Big(   y_ih(\\mathbf{x}_i)\\in\\{+1,-1\\}\\Big)\\\\\n",
+    "-\\sum_{i:h(\\mathbf{x}_i) y_i=1} e^{-(y_i H(\\mathbf{x}_i)+\\alpha \\underbrace{y_i h(\\mathbf{x}_i)}_\\mathrm{1})} + \\sum_{i:h(\\mathbf{x}_i) y_i = -1} e^{-(y_i H(\\mathbf{x}_i)+\\alpha \\underbrace{y_i h(\\mathbf{x}_i)}_\\mathrm{-1})}&=0 \n",
+    "&& \\Big(w_i= \\frac{1}{Z}e^{-y_iH(\\mathbf{x}_i)}\\Big)\\\\\n",
+    "-\\sum_{i:h(\\mathbf{x}_i) y_i=1} w_i e^{-\\alpha} + \\sum_{i:h(\\mathbf{x}_i) y_i = -1} w_i e^{\\alpha}&=0 \n",
+    "&& \\Big( \\epsilon=\\!\\!\\sum_{i:h(\\mathbf{x}_i)y_i=-1} \\!\\!w_i \\Big)\\\\\n",
+    "-(1-\\epsilon)e^{-\\alpha}+\\epsilon e^{\\alpha}&=0\n",
+    "&& \\\\\n",
+    "e^{2 \\alpha}&=\\frac{1-\\epsilon}{\\epsilon}\\\\\n",
+    "\\alpha&=\\frac{1}{2}\\ln \\frac{1-\\epsilon}{\\epsilon}\\\\\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\epsilon=\\sum_{i:h(\\mathbf{x}_i)y_i=-1} w_i\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data-mathml=\"<math xmlns=&quot;http://www.w3.org/1998/Math/MathML&quot; display=&quot;block&quot;><mtable columnalign=&quot;right left right left right left right left right left right left&quot; rowspacing=&quot;3pt&quot; columnspacing=&quot;0em 2em 0em 2em 0em 2em 0em 2em 0em 2em 0em&quot; displaystyle=&quot;true&quot;><mtr><mtd><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo></mtd><mtd><mi></mi><mo>=</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>argmin</mtext></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>h</mi><mo>&#x2208;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;double-struck&quot;>H</mi></mrow></mrow></msub><munderover><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>n</mi></mrow></munderover><msub><mi>r</mi><mi>i</mi></msub><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo></mtd><mtd /><mtd><mi></mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>(</mo></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>substitute in:&#xA0;</mtext></mrow><msub><mi>r</mi><mi>i</mi></msub><mo>=</mo><msup><mi>e</mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo>&#x2212;</mo><mi>H</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></msup><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>)</mo></mrow></mtd></mtr><mtr><mtd /><mtd><mi></mi><mo>=</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>argmin</mtext></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>h</mi><mo>&#x2208;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;double-struck&quot;>H</mi></mrow></mrow></msub><mo>&#x2212;</mo><munderover><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mi>n</mi></munderover><msub><mi>y</mi><mi>i</mi></msub><msup><mi>e</mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo>&#x2212;</mo><mi>H</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></msup><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo></mtd><mtd /><mtd><mi></mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>(</mo></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>substitute in:&#xA0;</mtext></mrow><msub><mi>w</mi><mi>i</mi></msub><mo>=</mo><mfrac><mn>1</mn><mi>Z</mi></mfrac><msup><mi>e</mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo>&#x2212;</mo><mi>H</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></msup><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>)</mo></mrow></mtd></mtr><mtr><mtd /><mtd><mi></mi><mo>=</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>argmin</mtext></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>h</mi><mo>&#x2208;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;double-struck&quot;>H</mi></mrow></mrow></msub><mo>&#x2212;</mo><munderover><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>n</mi></mrow></munderover><msub><mi>w</mi><mi>i</mi></msub><msub><mi>y</mi><mi>i</mi></msub><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo></mtd><mtd /><mtd><mi></mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>(</mo></mrow><msub><mi>y</mi><mi>i</mi></msub><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><mo>&#x2208;</mo><mo fence=&quot;false&quot; stretchy=&quot;false&quot;>{</mo><mo>+</mo><mn>1</mn><mo>,</mo><mo>&#x2212;</mo><mn>1</mn><mo fence=&quot;false&quot; stretchy=&quot;false&quot;>}</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>&#xA0;with&#xA0;</mtext></mrow><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><msub><mi>y</mi><mi>i</mi></msub><mo>=</mo><mn>1</mn><mspace width=&quot;thickmathspace&quot; /><mo stretchy=&quot;false&quot;>&#x27FA;</mo><mspace width=&quot;thickmathspace&quot; /><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><mo>=</mo><msub><mi>y</mi><mi>i</mi></msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>)</mo></mrow></mtd></mtr><mtr><mtd /><mtd><mi></mi><mo>=</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>argmin</mtext></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>h</mi><mo>&#x2208;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;double-struck&quot;>H</mi></mrow></mrow></msub><munder><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>:</mo><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><mo>&#x2260;</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></munder><msub><mi>w</mi><mi>i</mi></msub><mo>&#x2212;</mo><munder><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>:</mo><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><mo>=</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></munder><msub><mi>w</mi><mi>i</mi></msub></mtd><mtd /><mtd><mi></mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>(</mo></mrow><munder><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>:</mo><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><mo>=</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></munder><msub><mi>w</mi><mi>i</mi></msub><mo>=</mo><mn>1</mn><mo>&#x2212;</mo><munder><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>:</mo><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><mo>&#x2260;</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></munder><msub><mi>w</mi><mi>i</mi></msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>)</mo></mrow></mtd></mtr><mtr><mtd /><mtd><mi></mi><mo>=</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>argmin</mtext></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>h</mi><mo>&#x2208;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;double-struck&quot;>H</mi></mrow></mrow></msub><munder><mo>&#x2211;</mo><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi>i</mi><mo>:</mo><mi>h</mi><mo stretchy=&quot;false&quot;>(</mo><msub><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mi mathvariant=&quot;bold&quot;>x</mi></mrow><mi>i</mi></msub><mo stretchy=&quot;false&quot;>)</mo><mo>&#x2260;</mo><msub><mi>y</mi><mi>i</mi></msub></mrow></munder><msub><mi>w</mi><mi>i</mi></msub></mtd><mtd /><mtd><mi></mi><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>(</mo></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mtext>This is the weighted classification error.</mtext></mrow><mrow class=&quot;MJX-TeXAtom-ORD&quot;><mo maxsize=&quot;1.623em&quot; minsize=&quot;1.623em&quot;>)</mo></mrow></mtd></mtr></mtable></math>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/lecturenote19.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
